# labMTZPZ-2

./: CMakeLists.txt  README.md  converter.cpp  converter.hpp  main.cpp  tests.cpp
.github/workflows/: build.yml
